gcc/testsuite/gdc.test/compilable/imports/test72b.d
module imports.test72b;
private import imports.test72c : foo;
