gcc/testsuite/gdc.test/fail_compilation/imports/test19107b.d
module imports.test19107b;

import imports.test19107a : I;
